# vasted

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  bot.py  pyproject.toml  vasted
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
app/: __init__.py  cli.py  client_config.py  config.py  defaults.py  models.py  persistence.py  proxy.py  service.py  sizing.py  state.py  usage.py  user_config.py  vast.py
app/commands/: __init__.py  common.py  completions.py  config.py  down.py  logs.py  profile.py  rotate_token.py  serve.py  setup.py  status.py  token.py  up.py  usage.py
docs/: spec.md
docs/plans/: 2026-02-28-launch-policy-design.md  2026-02-28-setup-deployment-modes-design.md  2026-02-28-setup-deployment-modes.md  2026-02-28-vast-inventory-readiness-implementation.md
tests/: test_config.py  test_models.py  test_proxy.py  test_service.py  test_sizing.py  test_up.py  test_usage.py  test_vast.py  test_version.py
